Bug Fix
Overlapping Footer with Top Page

--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -17,7 +17,6 @@ ul {
     padding-left:5%;
     margin-left:-20px;
     padding-bottom: 20%;
-    position:absolute;
     width: 100%;
     height: 40%;
     bottom:0%;
